fixed dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 
 .app {
   background-color: var(--background);
+  min-height: 100vh;
 }
 
 /* HEADER */
@@ -31,12 +32,21 @@ h1 {
   color: var(--text);
 }
 
+.theme-switch {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 10px;
+  color: var(--text);
+}
+
 .theme {
   position: relative;
   width: 40px;
   height: 10px;
   background-color: var(--background-tasklist-input);
   border-radius: 10px;
+  margin-top: 10px;
 }
 
 .theme::after {
@@ -127,7 +137,7 @@ input[type="checkbox"] {
 footer {
   color: var(--text);
   text-align: center;
-  margin-top: 150px;
+  padding: 100px 0;
 }
 
 footer a {
