--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 /* Reset rules */
-.theme-light {
+.theme-light,
+body.theme-light {
   --text: #000;
   --background: #fff;
   --main-color: #5c48d3;
@@ -8,7 +9,8 @@
   --background-tasklist-input: #efedfd;
 }
 
-.theme-dark {
+.theme-dark,
+body.theme-dark {
   --text: #fff;
   --background: #000;
   --main-color: #5c48d3;
@@ -27,5 +29,4 @@ body {
   font-size: 16px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: var(--background);
 }
